--- a/Curso_de_Estatistica/Curso_de_Estatística_Parte_2.ipynb
+++ b/Curso_de_Estatistica/Curso_de_Estatística_Parte_2.ipynb
@@ -5599,9 +5599,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "source": [],
-   "outputs": [],
+   "execution_count": 104,
+   "source": [
+    "N = 10000\n",
+    "N"
+   ],
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "10000"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 104
+    }
+   ],
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -5624,9 +5638,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "source": [],
-   "outputs": [],
+   "execution_count": 105,
+   "source": [
+    "z = norm.ppf(0.5 + (0.95 / 2))\n",
+    "z"
+   ],
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "1.959963984540054"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 105
+    }
+   ],
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -5649,9 +5677,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "source": [],
-   "outputs": [],
+   "execution_count": 106,
+   "source": [
+    "s = 12\n",
+    "s"
+   ],
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "12"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 106
+    }
+   ],
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -5674,9 +5716,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "source": [],
-   "outputs": [],
+   "execution_count": 107,
+   "source": [
+    "e = 5\n",
+    "e"
+   ],
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "5"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 107
+    }
+   ],
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -5701,9 +5757,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "source": [],
-   "outputs": [],
+   "execution_count": 108,
+   "source": [
+    "n = ((z ** 2.) * (s ** 2.) * N) / (((z ** 2.) * (s ** 2.)) + ((e ** 2.) * (N - 1)))\n",
+    "int(n.round())"
+   ],
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "22"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 108
+    }
+   ],
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
