--- a/Regressao_linear-testando_relacoes_prevendo_resultados/Projeto/Regressao Linear.ipynb
+++ b/Regressao_linear-testando_relacoes_prevendo_resultados/Projeto/Regressao Linear.ipynb
@@ -331,9 +331,134 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "source": [],
-   "outputs": [],
+   "execution_count": 8,
+   "source": [
+    "dados.describe().round(2)"
+   ],
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>temp_media</th>\n",
+       "      <th>temp_min</th>\n",
+       "      <th>temp_max</th>\n",
+       "      <th>chuva</th>\n",
+       "      <th>fds</th>\n",
+       "      <th>consumo</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>count</th>\n",
+       "      <td>365.00</td>\n",
+       "      <td>365.00</td>\n",
+       "      <td>365.00</td>\n",
+       "      <td>365.00</td>\n",
+       "      <td>365.00</td>\n",
+       "      <td>365.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>mean</th>\n",
+       "      <td>21.23</td>\n",
+       "      <td>17.46</td>\n",
+       "      <td>26.61</td>\n",
+       "      <td>5.20</td>\n",
+       "      <td>0.28</td>\n",
+       "      <td>25401.37</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>std</th>\n",
+       "      <td>3.18</td>\n",
+       "      <td>2.83</td>\n",
+       "      <td>4.32</td>\n",
+       "      <td>12.42</td>\n",
+       "      <td>0.45</td>\n",
+       "      <td>4399.14</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>min</th>\n",
+       "      <td>12.90</td>\n",
+       "      <td>10.60</td>\n",
+       "      <td>14.50</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>14343.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25%</th>\n",
+       "      <td>19.02</td>\n",
+       "      <td>15.30</td>\n",
+       "      <td>23.80</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>22008.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>50%</th>\n",
+       "      <td>21.38</td>\n",
+       "      <td>17.90</td>\n",
+       "      <td>26.90</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>24867.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>75%</th>\n",
+       "      <td>23.28</td>\n",
+       "      <td>19.60</td>\n",
+       "      <td>29.40</td>\n",
+       "      <td>3.20</td>\n",
+       "      <td>1.00</td>\n",
+       "      <td>28631.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>max</th>\n",
+       "      <td>28.86</td>\n",
+       "      <td>24.50</td>\n",
+       "      <td>36.50</td>\n",
+       "      <td>94.80</td>\n",
+       "      <td>1.00</td>\n",
+       "      <td>37937.00</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       temp_media  temp_min  temp_max   chuva     fds   consumo\n",
+       "count      365.00    365.00    365.00  365.00  365.00    365.00\n",
+       "mean        21.23     17.46     26.61    5.20    0.28  25401.37\n",
+       "std          3.18      2.83      4.32   12.42    0.45   4399.14\n",
+       "min         12.90     10.60     14.50    0.00    0.00  14343.00\n",
+       "25%         19.02     15.30     23.80    0.00    0.00  22008.00\n",
+       "50%         21.38     17.90     26.90    0.00    0.00  24867.00\n",
+       "75%         23.28     19.60     29.40    3.20    1.00  28631.00\n",
+       "max         28.86     24.50     36.50   94.80    1.00  37937.00"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 8
+    }
+   ],
    "metadata": {}
   },
   {
@@ -347,9 +472,114 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "source": [],
-   "outputs": [],
+   "execution_count": 9,
+   "source": [
+    "dados.corr().round(4)"
+   ],
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>temp_media</th>\n",
+       "      <th>temp_min</th>\n",
+       "      <th>temp_max</th>\n",
+       "      <th>chuva</th>\n",
+       "      <th>fds</th>\n",
+       "      <th>consumo</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>temp_media</th>\n",
+       "      <td>1.0000</td>\n",
+       "      <td>0.8628</td>\n",
+       "      <td>0.9225</td>\n",
+       "      <td>0.0244</td>\n",
+       "      <td>-0.0508</td>\n",
+       "      <td>0.5746</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>temp_min</th>\n",
+       "      <td>0.8628</td>\n",
+       "      <td>1.0000</td>\n",
+       "      <td>0.6729</td>\n",
+       "      <td>0.0986</td>\n",
+       "      <td>-0.0595</td>\n",
+       "      <td>0.3925</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>temp_max</th>\n",
+       "      <td>0.9225</td>\n",
+       "      <td>0.6729</td>\n",
+       "      <td>1.0000</td>\n",
+       "      <td>-0.0493</td>\n",
+       "      <td>-0.0403</td>\n",
+       "      <td>0.6427</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>chuva</th>\n",
+       "      <td>0.0244</td>\n",
+       "      <td>0.0986</td>\n",
+       "      <td>-0.0493</td>\n",
+       "      <td>1.0000</td>\n",
+       "      <td>0.0016</td>\n",
+       "      <td>-0.1938</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>fds</th>\n",
+       "      <td>-0.0508</td>\n",
+       "      <td>-0.0595</td>\n",
+       "      <td>-0.0403</td>\n",
+       "      <td>0.0016</td>\n",
+       "      <td>1.0000</td>\n",
+       "      <td>0.5060</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>consumo</th>\n",
+       "      <td>0.5746</td>\n",
+       "      <td>0.3925</td>\n",
+       "      <td>0.6427</td>\n",
+       "      <td>-0.1938</td>\n",
+       "      <td>0.5060</td>\n",
+       "      <td>1.0000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "            temp_media  temp_min  temp_max   chuva     fds  consumo\n",
+       "temp_media      1.0000    0.8628    0.9225  0.0244 -0.0508   0.5746\n",
+       "temp_min        0.8628    1.0000    0.6729  0.0986 -0.0595   0.3925\n",
+       "temp_max        0.9225    0.6729    1.0000 -0.0493 -0.0403   0.6427\n",
+       "chuva           0.0244    0.0986   -0.0493  1.0000  0.0016  -0.1938\n",
+       "fds            -0.0508   -0.0595   -0.0403  0.0016  1.0000   0.5060\n",
+       "consumo         0.5746    0.3925    0.6427 -0.1938  0.5060   1.0000"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 9
+    }
+   ],
    "metadata": {}
   },
   {
