--- a/Regressao_linear-testando_relacoes_prevendo_resultados/Projeto/Regressao Linear.ipynb
+++ b/Regressao_linear-testando_relacoes_prevendo_resultados/Projeto/Regressao Linear.ipynb
@@ -1741,16 +1741,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "source": [],
-   "outputs": [],
+   "execution_count": 155,
+   "source": [
+    "modelo.intercept_"
+   ],
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "5951.976339312445"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 155
+    }
+   ],
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "source": [],
-   "outputs": [],
+   "execution_count": 156,
+   "source": [
+    "type(modelo.intercept_)"
+   ],
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "numpy.float64"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 156
+    }
+   ],
    "metadata": {}
   },
   {
@@ -1764,16 +1790,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "source": [],
-   "outputs": [],
+   "execution_count": 157,
+   "source": [
+    "modelo.coef_"
+   ],
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "array([ 684.73675898,  -60.7824355 , 5401.08333866])"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 157
+    }
+   ],
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "source": [],
-   "outputs": [],
+   "execution_count": 158,
+   "source": [
+    "type(modelo.coef_)"
+   ],
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "numpy.ndarray"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 158
+    }
+   ],
    "metadata": {}
   },
   {
@@ -1785,9 +1837,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "source": [],
-   "outputs": [],
+   "execution_count": 160,
+   "source": [
+    "X.columns"
+   ],
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "Index(['temp_max', 'chuva', 'fds'], dtype='object')"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 160
+    }
+   ],
    "metadata": {}
   },
   {
@@ -1799,8 +1864,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "source": [],
+   "execution_count": 161,
+   "source": [
+    "index = ['Intercepto', 'Temperatura Máxima', 'Chuva (mm)', 'Final de Semana']"
+   ],
    "outputs": [],
    "metadata": {}
   },
@@ -1815,9 +1882,69 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "source": [],
-   "outputs": [],
+   "execution_count": 162,
+   "source": [
+    "pd.DataFrame(data = np.append(modelo.intercept_, modelo.coef_), index = index, columns = ['Parâmetros'])"
+   ],
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Parâmetros</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>Intercepto</th>\n",
+       "      <td>5951.976339</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Temperatura Máxima</th>\n",
+       "      <td>684.736759</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Chuva (mm)</th>\n",
+       "      <td>-60.782435</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Final de Semana</th>\n",
+       "      <td>5401.083339</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                     Parâmetros\n",
+       "Intercepto          5951.976339\n",
+       "Temperatura Máxima   684.736759\n",
+       "Chuva (mm)           -60.782435\n",
+       "Final de Semana     5401.083339"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 162
+    }
+   ],
    "metadata": {
     "scrolled": true
    }
