--- a/Regressao_linear-testando_relacoes_prevendo_resultados/Projeto/Regressao Linear.ipynb
+++ b/Regressao_linear-testando_relacoes_prevendo_resultados/Projeto/Regressao Linear.ipynb
@@ -2446,9 +2446,68 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "source": [],
-   "outputs": [],
+   "execution_count": 64,
+   "source": [
+    "EQM_2 = metrics.mean_squared_error(y2_test, y_previsto_2).round(2)\n",
+    "REQM_2 = np.sqrt(metrics.mean_squared_error(y2_test, y_previsto_2)).round(2)\n",
+    "R2_2 = metrics.r2_score(y2_test, y_previsto_2).round(2)\n",
+    "\n",
+    "pd.DataFrame([EQM_2, REQM_2, R2_2], ['EQM', 'REQM', 'R²'], columns = ['Métricas'])"
+   ],
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Métricas</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>EQM</th>\n",
+       "      <td>6060775.46</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>REQM</th>\n",
+       "      <td>2461.86</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>R²</th>\n",
+       "      <td>0.66</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "        Métricas\n",
+       "EQM   6060775.46\n",
+       "REQM     2461.86\n",
+       "R²          0.66"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 64
+    }
+   ],
    "metadata": {}
   },
   {
@@ -2460,9 +2519,68 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "source": [],
-   "outputs": [],
+   "execution_count": 65,
+   "source": [
+    "EQM = metrics.mean_squared_error(y_test, y_previsto).round(2)\n",
+    "REQM = np.sqrt(metrics.mean_squared_error(y_test, y_previsto)).round(2)\n",
+    "R2 = metrics.r2_score(y_test, y_previsto).round(2)\n",
+    "\n",
+    "pd.DataFrame([EQM, REQM, R2], ['EQM', 'REQM', 'R²'], columns = ['Métricas'])"
+   ],
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Métricas</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>EQM</th>\n",
+       "      <td>5471976.38</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>REQM</th>\n",
+       "      <td>2339.23</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>R²</th>\n",
+       "      <td>0.69</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "        Métricas\n",
+       "EQM   5471976.38\n",
+       "REQM     2339.23\n",
+       "R²          0.69"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 65
+    }
+   ],
    "metadata": {}
   },
   {
