--- a/Regressao_linear-testando_relacoes_prevendo_resultados/Projeto/Regressao Linear.ipynb
+++ b/Regressao_linear-testando_relacoes_prevendo_resultados/Projeto/Regressao Linear.ipynb
@@ -2600,15 +2600,66 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "source": [],
-   "outputs": [],
+   "execution_count": 66,
+   "source": [
+    "X_test[0:1]"
+   ],
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>temp_max</th>\n",
+       "      <th>chuva</th>\n",
+       "      <th>fds</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>30.5</td>\n",
+       "      <td>12.2</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   temp_max  chuva  fds\n",
+       "5      30.5   12.2    0"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 66
+    }
+   ],
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "source": [],
+   "execution_count": 69,
+   "source": [
+    "entrada = X_test[0:1]"
+   ],
    "outputs": [],
    "metadata": {}
   },
@@ -2621,9 +2672,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "source": [],
-   "outputs": [],
+   "execution_count": 70,
+   "source": [
+    "modelo.predict(entrada)[0]"
+   ],
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "26094.901775262017"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 70
+    }
+   ],
    "metadata": {}
   },
   {
@@ -2635,9 +2699,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "source": [],
-   "outputs": [],
+   "execution_count": 72,
+   "source": [
+    "temp_max = 40\n",
+    "chuva = 12.2\n",
+    "fds = 0\n",
+    "entrada = [[temp_max, chuva, fds]]\n",
+    "\n",
+    "print('{0:.2f} litros'.format(modelo.predict(entrada)[0]))"
+   ],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "32599.90 litros\n"
+     ]
+    }
+   ],
    "metadata": {}
   },
   {
@@ -2659,14 +2738,20 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "source": [],
+   "source": [
+    "import pickle"
+   ],
    "outputs": [],
    "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "source": [],
+   "source": [
+    "output = open('modelo_consumo_cerveja', 'wb')\n",
+    "pickle.dump(modelo, output)\n",
+    "output.close()"
+   ],
    "outputs": [],
    "metadata": {}
   },
