--- a/Regressao_linear-testando_relacoes_prevendo_resultados/Projeto/read_model.ipynb
+++ b/Regressao_linear-testando_relacoes_prevendo_resultados/Projeto/read_model.ipynb
@@ -3,7 +3,19 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "source": [],
+   "source": [
+    "import pickle\n",
+    "\n",
+    "modelo = open('modelo_consumo_cerveja','rb')\n",
+    "lm_new = pickle.load(modelo)\n",
+    "modelo.close()\n",
+    "\n",
+    "temp_max = 30.5\n",
+    "chuva = 12.2\n",
+    "fds = 0\n",
+    "entrada = [[temp_max, chuva, fds]]\n",
+    "print('{0:.2f} litros'.format(lm_new.predict(entrada)[0]))"
+   ],
    "outputs": [
     {
      "output_type": "stream",
