--- a/Regressao_linear-testando_relacoes_prevendo_resultados/Projeto/Simulador Interativo.ipynb
+++ b/Regressao_linear-testando_relacoes_prevendo_resultados/Projeto/Simulador Interativo.ipynb
@@ -2,43 +2,33 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "metadata": {},
    "source": [
     "<h1 style='color: green; font-size: 36px; font-weight: bold;'>Data Science - Regressão Linear</h1>"
-   ]
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
    "source": [
     "# <font color='red' style='font-size: 30px;'>Bônus</font>\n",
     "<hr style='border: 2px solid red;'>"
-   ]
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
    "source": [
     "## Importando nosso modelo"
-   ]
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "$ 46389.80\n"
-     ]
-    }
-   ],
+   "execution_count": 3,
    "source": [
     "import pickle\n",
     "\n",
-    "modelo = open('../Exercício/modelo_preço','rb')\n",
+    "modelo = open('./modelo_preco','rb')\n",
     "lm_new = pickle.load(modelo)\n",
     "modelo.close()\n",
     "\n",
@@ -52,24 +42,32 @@
     "entrada = [[area, garagem, banheiros, lareira, marmore, andares]]\n",
     "\n",
     "print('$ {0:.2f}'.format(lm_new.predict(entrada)[0]))"
-   ]
+   ],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "$ 46389.80\n"
+     ]
+    }
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
    "source": [
     "## Exemplo de um simulador interativo para Jupyter\n",
     "\n",
     "https://ipywidgets.readthedocs.io/en/stable/index.html\n",
     "\n",
     "https://github.com/jupyter-widgets/ipywidgets"
-   ]
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 4,
    "source": [
     "# Importando bibliotecas\n",
     "from ipywidgets import widgets, HBox, VBox\n",
@@ -104,66 +102,60 @@
     "    \n",
     "# Atribuindo a função \"simulador\" ao evento click do botão\n",
     "botao.on_click(simulador)    "
-   ]
+   ],
+   "outputs": [],
+   "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
+   "execution_count": 6,
+   "source": [
+    "display(inputs, botao)"
+   ],
    "outputs": [
     {
+     "output_type": "display_data",
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "e536e3917f8945b89daa698ddfe43c3f",
        "version_major": 2,
-       "version_minor": 0
+       "version_minor": 0,
+       "model_id": "1d4b4f60e46d4ab8b88494c217c4f42a"
       },
       "text/plain": [
        "HBox(children=(VBox(children=(Text(value='38', description='Área'), Text(value='4', description='Banheiros'), …"
       ]
      },
-     "metadata": {},
-     "output_type": "display_data"
+     "metadata": {}
     },
     {
+     "output_type": "display_data",
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "7254f99544e548b0a6cc905d6a97e331",
        "version_major": 2,
-       "version_minor": 0
+       "version_minor": 0,
+       "model_id": "ebcd1963f4e9467aaf5c1a0b66cbe3ed"
       },
       "text/plain": [
        "Button(description='Simular', style=ButtonStyle())"
       ]
      },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "$ 46389.80\n"
-     ]
+     "metadata": {}
     }
    ],
-   "source": [
-    "display(inputs, botao)"
-   ]
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "source": [],
    "outputs": [],
-   "source": []
+   "metadata": {}
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
-   "language": "python",
-   "name": "python3"
+   "name": "python3",
+   "display_name": "Python 3.8.3 64-bit ('base': conda)"
   },
   "language_info": {
    "codemirror_mode": {
@@ -175,7 +167,10 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.0"
+   "version": "3.8.3"
+  },
+  "interpreter": {
+   "hash": "0e37f8b5187a005d5c39140e5c1b27d22840e7060e442bd6aa4a7c0a35643177"
   }
  },
  "nbformat": 4,
