Finalização do curso Regressão Linear: testando relações e prevendo resultados

--- a/Regressao_linear-testando_relacoes_prevendo_resultados/Projeto/Simulador Interativo.ipynb
+++ b/Regressao_linear-testando_relacoes_prevendo_resultados/Projeto/Simulador Interativo.ipynb
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 10,
    "source": [
     "import pickle\n",
     "\n",
@@ -67,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 11,
    "source": [
     "# Importando bibliotecas\n",
     "from ipywidgets import widgets, HBox, VBox\n",
@@ -108,7 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 12,
    "source": [
     "display(inputs, botao)"
    ],
@@ -119,10 +119,10 @@
       "application/vnd.jupyter.widget-view+json": {
        "version_major": 2,
        "version_minor": 0,
-       "model_id": "1d4b4f60e46d4ab8b88494c217c4f42a"
+       "model_id": "caf2a2e51c0a46e2a573cd0c5ba11ed0"
       },
       "text/plain": [
-       "HBox(children=(VBox(children=(Text(value='38', description='Área'), Text(value='4', description='Banheiros'), …"
+       "HBox(children=(VBox(children=(Text(value='', description='Área'), Text(value='', description='Banheiros'), Tex…"
       ]
      },
      "metadata": {}
@@ -133,7 +133,7 @@
       "application/vnd.jupyter.widget-view+json": {
        "version_major": 2,
        "version_minor": 0,
-       "model_id": "ebcd1963f4e9467aaf5c1a0b66cbe3ed"
+       "model_id": "43a2b15bb2fe4085bb4b9a57e28df322"
       },
       "text/plain": [
        "Button(description='Simular', style=ButtonStyle())"
