--- a/Regressao_linear-tecnicas_avancadas_modelagem/Projeto/Regressão Linear.ipynb
+++ b/Regressao_linear-tecnicas_avancadas_modelagem/Projeto/Regressão Linear.ipynb
@@ -213,9 +213,116 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "source": [],
-   "outputs": [],
+   "execution_count": 5,
+   "source": [
+    "dados.describe().round(2)"
+   ],
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Valor</th>\n",
+       "      <th>Area</th>\n",
+       "      <th>Dist_Praia</th>\n",
+       "      <th>Dist_Farmacia</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>count</th>\n",
+       "      <td>5000.00</td>\n",
+       "      <td>5000.00</td>\n",
+       "      <td>5000.00</td>\n",
+       "      <td>5000.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>mean</th>\n",
+       "      <td>1402926.39</td>\n",
+       "      <td>121.94</td>\n",
+       "      <td>3.02</td>\n",
+       "      <td>0.50</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>std</th>\n",
+       "      <td>1883268.85</td>\n",
+       "      <td>90.54</td>\n",
+       "      <td>3.17</td>\n",
+       "      <td>0.29</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>min</th>\n",
+       "      <td>75000.00</td>\n",
+       "      <td>16.00</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25%</th>\n",
+       "      <td>460000.00</td>\n",
+       "      <td>70.00</td>\n",
+       "      <td>0.44</td>\n",
+       "      <td>0.24</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>50%</th>\n",
+       "      <td>820000.00</td>\n",
+       "      <td>93.00</td>\n",
+       "      <td>1.48</td>\n",
+       "      <td>0.50</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>75%</th>\n",
+       "      <td>1590000.00</td>\n",
+       "      <td>146.00</td>\n",
+       "      <td>5.61</td>\n",
+       "      <td>0.75</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>max</th>\n",
+       "      <td>25000000.00</td>\n",
+       "      <td>2000.00</td>\n",
+       "      <td>17.96</td>\n",
+       "      <td>1.00</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "             Valor     Area  Dist_Praia  Dist_Farmacia\n",
+       "count      5000.00  5000.00     5000.00        5000.00\n",
+       "mean    1402926.39   121.94        3.02           0.50\n",
+       "std     1883268.85    90.54        3.17           0.29\n",
+       "min       75000.00    16.00        0.00           0.00\n",
+       "25%      460000.00    70.00        0.44           0.24\n",
+       "50%      820000.00    93.00        1.48           0.50\n",
+       "75%     1590000.00   146.00        5.61           0.75\n",
+       "max    25000000.00  2000.00       17.96           1.00"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 5
+    }
+   ],
    "metadata": {}
   },
   {
@@ -229,9 +336,84 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "source": [],
-   "outputs": [],
+   "execution_count": 6,
+   "source": [
+    "dados.corr().round(4)"
+   ],
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Valor</th>\n",
+       "      <th>Area</th>\n",
+       "      <th>Dist_Praia</th>\n",
+       "      <th>Dist_Farmacia</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>Valor</th>\n",
+       "      <td>1.0000</td>\n",
+       "      <td>0.7110</td>\n",
+       "      <td>-0.3665</td>\n",
+       "      <td>-0.0244</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Area</th>\n",
+       "      <td>0.7110</td>\n",
+       "      <td>1.0000</td>\n",
+       "      <td>-0.2834</td>\n",
+       "      <td>-0.0310</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Dist_Praia</th>\n",
+       "      <td>-0.3665</td>\n",
+       "      <td>-0.2834</td>\n",
+       "      <td>1.0000</td>\n",
+       "      <td>0.0256</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Dist_Farmacia</th>\n",
+       "      <td>-0.0244</td>\n",
+       "      <td>-0.0310</td>\n",
+       "      <td>0.0256</td>\n",
+       "      <td>1.0000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                Valor    Area  Dist_Praia  Dist_Farmacia\n",
+       "Valor          1.0000  0.7110     -0.3665        -0.0244\n",
+       "Area           0.7110  1.0000     -0.2834        -0.0310\n",
+       "Dist_Praia    -0.3665 -0.2834      1.0000         0.0256\n",
+       "Dist_Farmacia -0.0244 -0.0310      0.0256         1.0000"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 6
+    }
+   ],
    "metadata": {}
   },
   {
