--- a/Regressao_linear-tecnicas_avancadas_modelagem/Projeto/Regressão Linear.ipynb
+++ b/Regressao_linear-tecnicas_avancadas_modelagem/Projeto/Regressão Linear.ipynb
@@ -1084,8 +1084,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "source": [],
+   "execution_count": 24,
+   "source": [
+    "import statsmodels.api as sm"
+   ],
    "outputs": [],
    "metadata": {}
   },
@@ -1098,9 +1100,222 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "source": [],
+   "execution_count": 30,
+   "source": [
+    "X_train_com_constante = sm.add_constant(X_train)"
+   ],
    "outputs": [],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "source": [
+    "X_train_com_constante.head()"
+   ],
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>const</th>\n",
+       "      <th>log_Area</th>\n",
+       "      <th>log_Dist_Praia</th>\n",
+       "      <th>log_Dist_Farmacia</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>2661</th>\n",
+       "      <td>1.0</td>\n",
+       "      <td>5.945421</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.382273</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>912</th>\n",
+       "      <td>1.0</td>\n",
+       "      <td>3.135494</td>\n",
+       "      <td>0.972865</td>\n",
+       "      <td>0.605015</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3042</th>\n",
+       "      <td>1.0</td>\n",
+       "      <td>4.317488</td>\n",
+       "      <td>1.794961</td>\n",
+       "      <td>0.486594</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>141</th>\n",
+       "      <td>1.0</td>\n",
+       "      <td>3.401197</td>\n",
+       "      <td>0.310455</td>\n",
+       "      <td>0.599609</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3854</th>\n",
+       "      <td>1.0</td>\n",
+       "      <td>5.676754</td>\n",
+       "      <td>0.032193</td>\n",
+       "      <td>0.101903</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      const  log_Area  log_Dist_Praia  log_Dist_Farmacia\n",
+       "2661    1.0  5.945421        0.000000           0.382273\n",
+       "912     1.0  3.135494        0.972865           0.605015\n",
+       "3042    1.0  4.317488        1.794961           0.486594\n",
+       "141     1.0  3.401197        0.310455           0.599609\n",
+       "3854    1.0  5.676754        0.032193           0.101903"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 31
+    }
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "source": [
+    "modelo_statsmodels = sm.OLS(y_train, X_train_com_constante, hasconst = True).fit()   # OLS :: Ordinary least squares"
+   ],
+   "outputs": [],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "source": [
+    "modelo_statsmodels.summary()"
+   ],
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/html": [
+       "<table class=\"simpletable\">\n",
+       "<caption>OLS Regression Results</caption>\n",
+       "<tr>\n",
+       "  <th>Dep. Variable:</th>        <td>log_Valor</td>    <th>  R-squared:         </th> <td>   0.805</td>\n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>Model:</th>                   <td>OLS</td>       <th>  Adj. R-squared:    </th> <td>   0.805</td>\n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>Method:</th>             <td>Least Squares</td>  <th>  F-statistic:       </th> <td>   5495.</td>\n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>Date:</th>             <td>Sun, 03 Apr 2022</td> <th>  Prob (F-statistic):</th>  <td>  0.00</td> \n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>Time:</th>                 <td>22:41:43</td>     <th>  Log-Likelihood:    </th> <td> -2044.9</td>\n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>No. Observations:</th>      <td>  4000</td>      <th>  AIC:               </th> <td>   4098.</td>\n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>Df Residuals:</th>          <td>  3996</td>      <th>  BIC:               </th> <td>   4123.</td>\n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>Df Model:</th>              <td>     3</td>      <th>                     </th>     <td> </td>   \n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>Covariance Type:</th>      <td>nonrobust</td>    <th>                     </th>     <td> </td>   \n",
+       "</tr>\n",
+       "</table>\n",
+       "<table class=\"simpletable\">\n",
+       "<tr>\n",
+       "          <td></td>             <th>coef</th>     <th>std err</th>      <th>t</th>      <th>P>|t|</th>  <th>[0.025</th>    <th>0.975]</th>  \n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>const</th>             <td>    9.3417</td> <td>    0.060</td> <td>  154.734</td> <td> 0.000</td> <td>    9.223</td> <td>    9.460</td>\n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>log_Area</th>          <td>    1.0580</td> <td>    0.012</td> <td>   89.320</td> <td> 0.000</td> <td>    1.035</td> <td>    1.081</td>\n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>log_Dist_Praia</th>    <td>   -0.4905</td> <td>    0.009</td> <td>  -56.690</td> <td> 0.000</td> <td>   -0.508</td> <td>   -0.474</td>\n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>log_Dist_Farmacia</th> <td>   -0.0167</td> <td>    0.032</td> <td>   -0.521</td> <td> 0.603</td> <td>   -0.080</td> <td>    0.046</td>\n",
+       "</tr>\n",
+       "</table>\n",
+       "<table class=\"simpletable\">\n",
+       "<tr>\n",
+       "  <th>Omnibus:</th>       <td>64.751</td> <th>  Durbin-Watson:     </th> <td>   1.971</td>\n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>Prob(Omnibus):</th> <td> 0.000</td> <th>  Jarque-Bera (JB):  </th> <td> 106.858</td>\n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>Skew:</th>          <td> 0.136</td> <th>  Prob(JB):          </th> <td>6.25e-24</td>\n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>Kurtosis:</th>      <td> 3.753</td> <th>  Cond. No.          </th> <td>    47.6</td>\n",
+       "</tr>\n",
+       "</table><br/><br/>Warnings:<br/>[1] Standard Errors assume that the covariance matrix of the errors is correctly specified."
+      ],
+      "text/plain": [
+       "<class 'statsmodels.iolib.summary.Summary'>\n",
+       "\"\"\"\n",
+       "                            OLS Regression Results                            \n",
+       "==============================================================================\n",
+       "Dep. Variable:              log_Valor   R-squared:                       0.805\n",
+       "Model:                            OLS   Adj. R-squared:                  0.805\n",
+       "Method:                 Least Squares   F-statistic:                     5495.\n",
+       "Date:                Sun, 03 Apr 2022   Prob (F-statistic):               0.00\n",
+       "Time:                        22:41:43   Log-Likelihood:                -2044.9\n",
+       "No. Observations:                4000   AIC:                             4098.\n",
+       "Df Residuals:                    3996   BIC:                             4123.\n",
+       "Df Model:                           3                                         \n",
+       "Covariance Type:            nonrobust                                         \n",
+       "=====================================================================================\n",
+       "                        coef    std err          t      P>|t|      [0.025      0.975]\n",
+       "-------------------------------------------------------------------------------------\n",
+       "const                 9.3417      0.060    154.734      0.000       9.223       9.460\n",
+       "log_Area              1.0580      0.012     89.320      0.000       1.035       1.081\n",
+       "log_Dist_Praia       -0.4905      0.009    -56.690      0.000      -0.508      -0.474\n",
+       "log_Dist_Farmacia    -0.0167      0.032     -0.521      0.603      -0.080       0.046\n",
+       "==============================================================================\n",
+       "Omnibus:                       64.751   Durbin-Watson:                   1.971\n",
+       "Prob(Omnibus):                  0.000   Jarque-Bera (JB):              106.858\n",
+       "Skew:                           0.136   Prob(JB):                     6.25e-24\n",
+       "Kurtosis:                       3.753   Cond. No.                         47.6\n",
+       "==============================================================================\n",
+       "\n",
+       "Warnings:\n",
+       "[1] Standard Errors assume that the covariance matrix of the errors is correctly specified.\n",
+       "\"\"\""
+      ]
+     },
+     "metadata": {},
+     "execution_count": 34
+    }
+   ],
    "metadata": {}
   },
   {
