--- a/Regressao_linear-tecnicas_avancadas_modelagem/Projeto/Regressão Linear.ipynb
+++ b/Regressao_linear-tecnicas_avancadas_modelagem/Projeto/Regressão Linear.ipynb
@@ -1511,8 +1511,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "source": [],
+   "execution_count": 66,
+   "source": [
+    "from sklearn.linear_model import LinearRegression\n",
+    "from sklearn import metrics "
+   ],
    "outputs": [],
    "metadata": {}
   },
@@ -1525,8 +1528,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "source": [],
+   "execution_count": 67,
+   "source": [
+    "modelo = LinearRegression()"
+   ],
    "outputs": [],
    "metadata": {}
   },
@@ -1541,9 +1546,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "source": [],
-   "outputs": [],
+   "execution_count": 68,
+   "source": [
+    "modelo.fit(X_train, y_train)"
+   ],
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "LinearRegression()"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 68
+    }
+   ],
    "metadata": {}
   },
   {
@@ -1563,9 +1581,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "source": [],
-   "outputs": [],
+   "execution_count": 70,
+   "source": [
+    "print('R² = {}'.format(modelo.score(X_train, y_train).round(3)) )"
+   ],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "R² = 0.805\n"
+     ]
+    }
+   ],
    "metadata": {}
   },
   {
@@ -1579,8 +1607,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "source": [],
+   "execution_count": 71,
+   "source": [
+    "y_previsto = modelo.predict(X_test)"
+   ],
    "outputs": [],
    "metadata": {}
   },
@@ -1595,9 +1625,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "source": [],
-   "outputs": [],
+   "execution_count": 72,
+   "source": [
+    "print('R² = %s' % metrics.r2_score(y_test, y_previsto).round(3))"
+   ],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "R² = 0.79\n"
+     ]
+    }
+   ],
    "metadata": {}
   },
   {
