--- a/Regressao_linear-tecnicas_avancadas_modelagem/Projeto/Regressão Linear.ipynb
+++ b/Regressao_linear-tecnicas_avancadas_modelagem/Projeto/Regressão Linear.ipynb
@@ -1657,9 +1657,57 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "source": [],
-   "outputs": [],
+   "execution_count": 73,
+   "source": [
+    "entrada = X_test[0:1]\n",
+    "entrada"
+   ],
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>log_Area</th>\n",
+       "      <th>log_Dist_Praia</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>1006</th>\n",
+       "      <td>5.273</td>\n",
+       "      <td>1.282769</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      log_Area  log_Dist_Praia\n",
+       "1006     5.273        1.282769"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 73
+    }
+   ],
    "metadata": {}
   },
   {
@@ -1671,9 +1719,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "source": [],
-   "outputs": [],
+   "execution_count": 75,
+   "source": [
+    "modelo.predict(entrada)[0]"
+   ],
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "14.28482006184788"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 75
+    }
+   ],
    "metadata": {}
   },
   {
@@ -1687,9 +1748,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "source": [],
-   "outputs": [],
+   "execution_count": 76,
+   "source": [
+    "np.exp(modelo.predict(entrada)[0])"
+   ],
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "1598889.784779439"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 76
+    }
+   ],
    "metadata": {}
   },
   {
@@ -1701,9 +1775,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "source": [],
-   "outputs": [],
+   "execution_count": 78,
+   "source": [
+    "Area = 150\n",
+    "Dist_Praia = 1\n",
+    "entrada = [[np.log(Area), np.log(Dist_Praia + 1)]]\n",
+    "\n",
+    "print('R$ {0:.2f}'.format(np.exp(modelo.predict(entrada)[0])))"
+   ],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "R$ 1617664.12\n"
+     ]
+    }
+   ],
    "metadata": {}
   },
   {
