--- a/Regressao_linear-tecnicas_avancadas_modelagem/Projeto/Regressão Linear.ipynb
+++ b/Regressao_linear-tecnicas_avancadas_modelagem/Projeto/Regressão Linear.ipynb
@@ -1813,16 +1813,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "source": [],
-   "outputs": [],
+   "execution_count": 79,
+   "source": [
+    "modelo.intercept_"
+   ],
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "9.334916409800332"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 79
+    }
+   ],
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "source": [],
-   "outputs": [],
+   "execution_count": 80,
+   "source": [
+    "np.exp(modelo.intercept_)"
+   ],
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "11326.681428069882"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 80
+    }
+   ],
    "metadata": {}
   },
   {
@@ -1838,9 +1864,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "source": [],
-   "outputs": [],
+   "execution_count": 81,
+   "source": [
+    "modelo.coef_"
+   ],
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "array([ 1.05807818, -0.49061226])"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 81
+    }
+   ],
    "metadata": {}
   },
   {
@@ -1852,9 +1891,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "source": [],
-   "outputs": [],
+   "execution_count": 82,
+   "source": [
+    "X.columns"
+   ],
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "Index(['log_Area', 'log_Dist_Praia'], dtype='object')"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 82
+    }
+   ],
    "metadata": {}
   },
   {
@@ -1866,8 +1918,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "source": [],
+   "execution_count": 84,
+   "source": [
+    "index = ['Intercepto', 'log Área', 'log Distância até a Praia']"
+   ],
    "outputs": [],
    "metadata": {}
   },
@@ -1882,9 +1936,64 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "source": [],
-   "outputs": [],
+   "execution_count": 85,
+   "source": [
+    "pd.DataFrame(data = np.append(modelo.intercept_, modelo.coef_), index = index, columns = ['Parâmetros'])"
+   ],
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Parâmetros</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>Intercepto</th>\n",
+       "      <td>9.334916</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>log Área</th>\n",
+       "      <td>1.058078</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>log Distância até a Praia</th>\n",
+       "      <td>-0.490612</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                           Parâmetros\n",
+       "Intercepto                   9.334916\n",
+       "log Área                     1.058078\n",
+       "log Distância até a Praia   -0.490612"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 85
+    }
+   ],
    "metadata": {
     "scrolled": true
    }
