--- a/Data_Visualization/criacao_graficos_com_matplotlib/Aula1.ipynb
+++ b/Data_Visualization/criacao_graficos_com_matplotlib/Aula1.ipynb
@@ -2802,10 +2802,15 @@
    "metadata": {}
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
+   "source": [
+    "Fim do curso"
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "markdown",
    "source": [],
-   "outputs": [],
    "metadata": {}
   }
  ],
