início Aula 02: Explorando as distribuições das amostras

--- a/Data_Science-Introducao_testes_estatisticos_com_python/Data_Science-introducao_a_testes.ipynb
+++ b/Data_Science-Introducao_testes_estatisticos_com_python/Data_Science-introducao_a_testes.ipynb
@@ -1633,6 +1633,13 @@
    "metadata": {}
   },
   {
+   "cell_type": "markdown",
+   "source": [
+    "# Aula 02: Explorando as distribuições das amostras"
+   ],
+   "metadata": {}
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "source": [],
