--- a/Data_Science-Introducao_testes_estatisticos_com_python/Data_Science-introducao_a_testes.ipynb
+++ b/Data_Science-Introducao_testes_estatisticos_com_python/Data_Science-introducao_a_testes.ipynb
@@ -2509,6 +2509,59 @@
    "metadata": {}
   },
   {
+   "cell_type": "markdown",
+   "source": [
+    "## 03.03 Intervalo de confiança da média com t e ztest"
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "source": [
+    "from statsmodels.stats.weightstats import zconfint\n",
+    "\n",
+    "zconfint(nota_media_dos_filmes_com_pelo_menos_10_votos)"
+   ],
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "(3.4112459477469557, 3.452854733323563)"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 49
+    }
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "source": [
+    "from statsmodels.stats.weightstats import DescrStatsW\n",
+    "\n",
+    "descr_todos_com_10_votos = DescrStatsW(nota_media_dos_filmes_com_pelo_menos_10_votos)\n",
+    "\n",
+    "descr_todos_com_10_votos.tconfint_mean()"
+   ],
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "(3.41123483922938, 3.4528658418411386)"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 50
+    }
+   ],
+   "metadata": {}
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "source": [],
