Início Aula 04: Outros testes

--- a/Data_Science-Introducao_testes_estatisticos_com_python/Data_Science-introducao_a_testes.ipynb
+++ b/Data_Science-Introducao_testes_estatisticos_com_python/Data_Science-introducao_a_testes.ipynb
@@ -2562,6 +2562,13 @@
    "metadata": {}
   },
   {
+   "cell_type": "markdown",
+   "source": [
+    "# Aula 04: Outros testes"
+   ],
+   "metadata": {}
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "source": [],
