--- a/Data_Science-Introducao_testes_estatisticos_com_python/Data_Science-introducao_a_testes.ipynb
+++ b/Data_Science-Introducao_testes_estatisticos_com_python/Data_Science-introducao_a_testes.ipynb
@@ -4042,10 +4042,61 @@
    "metadata": {}
   },
   {
+   "cell_type": "markdown",
+   "source": [
+    "## 06.03 Comparação não paramétrica com Wilcoxon Ranksums"
+   ],
+   "metadata": {}
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 89,
+   "source": [
+    "from scipy.stats import normaltest\n",
+    "\n",
+    "_, p = normaltest(notas1['rating'])\n",
+    "p"
+   ],
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "0.00011053430732728716"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 89
+    }
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 92,
+   "source": [
+    "from scipy.stats import ranksums\n",
+    "\n",
+    "_, p = ranksums(notas1['rating'], notas593['rating'])\n",
+    "p\n"
+   ],
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "0.0003267718756440693"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 92
+    }
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "markdown",
    "source": [],
-   "outputs": [],
    "metadata": {}
   }
  ],
